# financas-backend

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
auth/: auth.py  m2f.py
controller/: categoria_controller.py  conta_bancaria_controller.py  dashboard_controller.py  transacao_controller.py
database/: db.py  db_reset.py  models.py
requests/: form_requests.py
services/: huggingAPI.py
setup/: settings.py
templates/: email.html
